--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": " tsc -b && vite build",
+    "typecheck": " tsc --noEmit",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -31,6 +32,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1"
   }
 }
